<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dialogText1MargStart"
        android:layout_marginTop="@dimen/dialogText1MargTop"
        android:layout_marginEnd="@dimen/dialogText1MargEnd"
        android:layout_marginBottom="@dimen/dialogText1MargBot"
        android:fontFamily="sans-serif"
        android:text="@string/chooseFoto"
        android:textColor="@color/black__87"
        android:textSize="@dimen/dialogTextSize"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="@dimen/dialogPicWidth"
        android:layout_height="@dimen/dialogPicHeight"
        android:layout_marginStart="@dimen/dialogPicMargStart"
        android:layout_marginTop="@dimen/dialogPic1MargTop"
        android:layout_marginEnd="@dimen/dialogPicMargEnd"
        android:layout_marginBottom="@dimen/dialogPic1MargBot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/upload" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialogText2MargTop"
        android:layout_marginBottom="@dimen/dialogText2MargBot"
        android:fontFamily="sans-serif"
        android:text="@string/makeFoto"
        android:textColor="@color/black__87"
        android:textSize="@dimen/dialogTextSize"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="@dimen/dialogPicWidth"
        android:layout_height="@dimen/dialogPicHeight"
        android:layout_marginStart="@dimen/dialogPicMargStart"
        android:layout_marginTop="@dimen/dialogPic2MargTop"
        android:layout_marginEnd="@dimen/dialogPicMargEnd"
        android:layout_marginBottom="@dimen/dialogPic2MargBot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/camera" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialogText3MargTop"
        android:layout_marginBottom="@dimen/dialogText3MargBot"
        android:fontFamily="sans-serif"
        android:text="@string/deleteFoto"
        android:textColor="@color/black__87"
        android:textSize="@dimen/dialogTextSize"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="@dimen/dialogPicWidth"
        android:layout_height="@dimen/dialogPicHeight"
        android:layout_marginStart="@dimen/dialogPicMargStart"
        android:layout_marginTop="@dimen/dialogPic3MargTop"
        android:layout_marginEnd="@dimen/dialogPicMargEnd"
        android:layout_marginBottom="@dimen/dialogPic3MargBot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/delete" />

</android.support.constraint.ConstraintLayout>